# RBTree

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeSettings.json  README.md
RBTree/: CMakeLists.txt
RBTree/includes/: rbtree.hpp  rbtree_impl.hpp
RBTree/sources/: main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/files_for_tests/: 2.txt  2_ans.txt  3.txt  3_ans.txt  4.txt  4_ans.txt  5.txt  5_ans.txt
